<resources>
    <string name="app_name">Kiddie Tracking Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_child">Register Child</string>
    <string name="register_bus">Register Bus</string>
    <string name="register_new_child">Register New Child</string>
    <string name="create_account">Create Account</string>
    <string name="register_new_bus">Register New Bus</string>
    <string name="driver_name">Driver Name</string>
    <string name="bus_number">Bus Number</string>
    <string name="driver_number">Driver Number</string>
    <string name="child_name">Child Name</string>
    <string name="child_class_and_section">Child Class and Section</string>
    <string name="parent_name">Parent Name</string>
    <string name="parents_contact_number">Parents Contact Number</string>
    <string name="save">Save</string>
    <string name="driver_contact_number">Driver Contact Number</string>
    <string name="edit_driver_details">Edit Driver Details</string>
    <string name="driver_list">Driver List</string>
</resources>