<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegisterChildFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/childImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@color/primary"
                android:padding="15dp"
                android:layout_margin="25dp"
                android:contentDescription="@string/register_new_child"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Spinner
                android:id="@+id/driver_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                app:layout_constraintTop_toBottomOf="@+id/childImage"
                tools:layout_editor_absoluteX="25dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_spinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/driver_name_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/child_name"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/childName"
                    android:fontFamily="@font/nunito_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/driver_number_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/parent_name"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_name_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentName"
                    android:fontFamily="@font/nunito_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bus_number_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/parents_contact_number"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/driver_number_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/parentsContact"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/class_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/child_class_and_section"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/lightGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bus_number_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/childClass"
                    android:fontFamily="@font/nunito_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createChildButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/btn_background"
                android:backgroundTint="@color/primary"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/create_account"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_textInput"
                tools:layout_editor_absoluteX="25dp" />

            <ProgressBar
                android:id="@+id/pg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/createChildButton"
                app:layout_constraintEnd_toEndOf="@+id/createChildButton"
                app:layout_constraintTop_toTopOf="@id/createChildButton"
                app:layout_constraintStart_toStartOf="@id/createChildButton"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loadingView"
                android:visibility="gone"
                android:background="@color/background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/progressbar_costume_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.565" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"
        android:text="@string/register_new_child"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>